完善rag功能